# linkit-smart-duo-cmake-template

./: .linkitrc  CMakeLists.txt  README.md  cm.sh  main.c  upload.sh
